outsourcing config into property files

--- a/web/src/main/resources/templates/stream.html
+++ b/web/src/main/resources/templates/stream.html
@@ -2,11 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Live Stream</title>
 </head>
-
 <body>
-
 
 <div>
 <table id="streamtable" border="1">
@@ -18,10 +16,12 @@
         <th>Engine</th>
         <th>Price USD</th>
         <th>Prediction</th>
+        <th>Publication date</th>
     </tr>
 </table>
 </div>
 
 <script src="streamreader.js"></script>
 </body>
+
 </html>
