--- a/web/src/main/resources/templates/registration.html
+++ b/web/src/main/resources/templates/registration.html
@@ -5,8 +5,8 @@
     <title>Sign in</title>
 </head>
 <body>
-    <form method="post" action="/users">
-    User name <input type="text" name="name"><br>
+<form action="/registration" method="post">
+    User name <input name="username" type="text"><br>
     Password <input type="text" name="password"><br>
     <input type="submit" >
     </form>
