--- a/web/src/main/resources/templates/search.html
+++ b/web/src/main/resources/templates/search.html
@@ -55,7 +55,8 @@
 <body>
 
 Welcome  [[${userName}]]
-<a href=/login>logout</a><br>
+<br>
+<a href=/home>to home page</a><br>
 
 <form class="filters">
     Your saved filters are: <br>
