--- a/web/src/main/resources/templates/home.html
+++ b/web/src/main/resources/templates/home.html
@@ -9,9 +9,9 @@
 Welcome [[${userName}]] <br>
 Click on available options to proceed:
 
-<div><a th:href="@{/search}">Static data search</a></div>
-<div><a href="trainModel">Train new ML model</a></div>
-<div><a href="stream">Read stream with ML predictions</a></div>
+<div><a th:href="@{/search}">Search static data</a></div>
+<div><a href="model">Train new ML model</a></div>
+<div><a href="stream">Data stream with ML predictions</a></div>
 <div><a href="login?logout">Logout</a></div>
 
 </body>
