--- a/web/src/main/resources/templates/stream.html
+++ b/web/src/main/resources/templates/stream.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,21 +8,23 @@
 <body>
 
 <div>
-<table id="streamtable" border="1">
-    <tr align="left">
-        <th>Model</th>
-        <th>Brand</th>
-        <th>Year</th>
-        <th>Race</th>
-        <th>Engine</th>
-        <th>Price USD</th>
-        <th>Prediction</th>
-        <th>Publication date</th>
-    </tr>
-</table>
+    <table border="1" id="streamtable">
+        <tr align="left">
+            <th>Model</th>
+            <th>Brand</th>
+            <th>Year</th>
+            <th>Race</th>
+            <th>Engine</th>
+            <th>Price USD</th>
+            <th>Prediction</th>
+            <th>Publication date</th>
+        </tr>
+    </table>
 </div>
+
 
 <script src="streamreader.js"></script>
 </body>
+
 
 </html>
