Model now trained and deployed from web

--- a/web/src/main/resources/templates/search.html
+++ b/web/src/main/resources/templates/search.html
@@ -55,9 +55,7 @@
 </head>
 <body>
 
-Welcome  [[${userName}]]
-<br>
-<a href=/home>to home page</a><br>
+<a href="/home">Home</a><br>
 
 <form class="filters">
     Your saved filters are: <br>
