--- a/web/src/main/resources/templates/streamfilter.html
+++ b/web/src/main/resources/templates/streamfilter.html
@@ -5,6 +5,7 @@
     <title>Filter Stream</title>
 </head>
 <body style="height:100vh">
+<a href="/home">Home</a><br>
 
 <div>
     <form action="/stream" method="post" target="records">
